test/corpus/attributes.txt
====================
Attribute specifier
====================

private import std;

private:
import std;

private {
  import std;
}

---

(source_file
  (module
    (attribute_specifier
      (visibility_attribute)
      (import_declaration
        (import_list
          (import
            (module_fully_qualified_name
              (identifier)
            )
          )
        )
      )
    )
    (attribute_specifier
      (visibility_attribute)
    )
    (import_declaration
      (import_list
        (import
          (module_fully_qualified_name
            (identifier)
          )
        )
      )
    )
    (attribute_specifier
      (visibility_attribute)
      (declaration_block
        (import_declaration
          (import_list
            (import
              (module_fully_qualified_name
                (identifier)
              )
            )
          )
        )
      )
    )
  )
)
